--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,3 +1,22 @@
+// css reset
+@import "_normalize";
+@import "_variables";
+@import "_vertical-rhythm";
+
+// setup & config
+@import "app";
+
+// global / shared
+
+
+// components
+
+
+// views
+
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
