--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -1,6 +1,5 @@
 .Header {
 	background-color: #f2f2f2;
-	padding: 10px;
 	box-sizing: border-box;
 	display: flex;
 	.Logo-container {
@@ -8,10 +7,14 @@
 		align-items: center;
 		text-decoration: none;
 		color: black;
-		margin-right: 80px;
+		margin-right: 50px;
+		border: none;
 		.App-logo {
 			height: 80px;
 		}
+	}
+	.menuButton {
+		display: none;
 	}
 	.Navbar {
 		width: 80%;
@@ -19,9 +22,8 @@
 		flex-wrap: wrap;
 		justify-content: space-between;
 		align-items: center;
-		.AppMenu {}
-		.AccountMenu {
-			border: 2px solid darkseagreen;
+		button, a {
+			color: #f2f2f2;
 		}
 	}
 }
