saving changes for router

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -14,6 +14,6 @@
 @import "../../components/footer/footer";
 
 // views
-@import "../../views/login/login";
-@import "../../views/notFound/notFound";
+@import "src/pages/login/login";
+@import "src/pages/notFound/notFound";
 
